@@ -3,9 +3,10 @@
 use lib 'lib', '../lib';
 
 use Geo::Coder::GeocodeFarm;
+use Encode;
 use Data::Dumper;
 
-my %args = map { /^(.*?)=(.*)$/ and ($1 => $2) } @ARGV;
+my %args = map { /^(.*?)=(.*)$/ and ($1 => decode_utf8($2)) } @ARGV;
 
 die "Usage: geocoder.pl key=3d517dd448a5ce1c2874637145fed69903bc252a location='530 West Main St Anoka MN 55303'\n"
     unless defined $args{key} and defined $args{location};
